# cocos-engine

./: CCDebugger.js  cc.config.json  extends.js  index.js  interface-diff.txt  tsconfig.json
.github/workflows/: native-compile-linux.yml  native-compile-platforms.yml  native-linter-android.yml  native-simulator.yml  native-unit-test.yml  web-interface-check.yml  web-interface-post-comment.yml
cocos/2d/renderer/: draw-batch.ts
cocos/3d/assets/: mesh.jsb.ts  morph.ts
cocos/3d/framework/: mesh-renderer.jsb.ts  mesh-renderer.ts
cocos/3d/lights/: directional-light-component.ts  light-component.ts
cocos/animation/: animation-clip.ts  animation-component.ts
cocos/asset/asset-manager/: deserialize.ts  downloader.ts  parser.ts  url-transformer.ts  utilities.ts
cocos/asset/assets/: asset.ts  material.ts  (+6 more)
cocos/core/: director.ts  index.ts  root.jsb.ts
cocos/game/: director.ts
cocos/misc/: camera-component.ts  model-renderer.ts  renderer.ts
cocos/native-binding/: decorators.ts
cocos/scene-graph/: component.ts  node.jsb.ts  node.ts  scene-globals.ts  scene.jsb.ts  scene.ts
cocos/serialization/: report-missing-class.ts
cocos/tween/: tween.ts
cocos2d/: deprecated.js
cocos2d/core/: CCDirector.js  CCGame.js  CCNode.js  CCScene.js
cocos2d/motion-streak/: CCMotionStreak.js
cocos2d/tilemap/: CCTiledLayer.js  CCTiledObjectGroup.js
extensions/ccpool/: CCPool.js
extensions/dragonbones/: ArmatureDisplay.js  DragonBonesAsset.js  DragonBonesAtlasAsset.js  index.js
extensions/spine/: Skeleton.js  SkeletonData.js  index.js  skeleton-data.js
gulp/tasks/: engine.js
jsb/: enums.js  gfx.js  index.js  jsb-audio.js  jsb-etc.js  jsb-game.js  jsb-loader.js  jsb_prepare.js  vertex-format.js
jsb/builtin/: glOptMode.js  index.js  jsb_opengl.js  jsb_opengl_constants.js  jsb_prepare.js  package.json
jsb/jsb-adapter/: Event.js  EventTarget.js  FontFace.js  FontFaceSet.js  HTMLCanvasElement.js  HTMLElement.js  HTMLImageElement.js  TouchEvent.js  document.js  index.js  window.js
native/: CMakeLists.txt
native/cmake/: predefine.cmake
native/cocos/editor-support/spine-wasm/: CMakeLists.txt
templates/cmake/: android.cmake
templates/common/: CMakeLists.txt
(+378 files in other folders)
